# batch-router

./: .gitignore  README.md  main.py  pyproject.toml
.agent/workflows/: update-readme.md
.github/workflows/: publish.yml
docs/: PLAN.md  TODO.md
docs/api-guides/: google-batch-processing.md  minimax-batch-processing.md  mistral-batch-processing.md  vllm-batch-processing.md
docs/todo/: AUDIO_CONTENT_SPECIFICATION.md  batchrouter.md
src/batch_router/: __init__.py
src/batch_router/core/: __init__.py  base.py  content.py  messages.py  output.py  requests.py  responses.py
src/batch_router/core/base/: __init__.py  batch.py  content.py  modality.py  provider.py  request.py
src/batch_router/core/input/: __init__.py  batch.py  message.py  request.py  role.py
src/batch_router/core/output/: __init__.py  batch.py  message.py  request.py  role.py
src/batch_router/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  mistral_provider.py  openai_provider.py  vllm_provider.py
src/batch_router/providers/anthropic/: anthropic_provider.py
src/batch_router/utilities/: mime_type.py
src/batch_router/utils/: __init__.py  audio.py
tests/: __init__.py
tests/test_core/: test_audio_content.py  test_base.py  test_config.py  test_content.py  test_enums.py  test_messages.py  test_modality_validation.py  test_requests.py  test_responses.py
tests/test_integration/: __init__.py  test_custom_naming.py
tests/test_providers/: test_anthropic_provider.py  test_google_provider.py  test_mistral_provider.py  test_openai_provider.py  test_provider_audio_conversion.py  test_vllm_provider.py
tests/test_utils/: test_audio_utils.py  test_file_naming.py
(+16 files in other folders)
